<?xml version="1.0" encoding="UTF-8"?>
<!--
 ** Copyright (C) 2012 The CyanogenMod Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
 ** You may obtain a copy of the License at
 **
 **      http://www.apache.org/licenses/LICENSE-2.0
 **
 ** Unless required by applicable law or agreed to in writing, software
 ** distributed under the License is distributed on an "AS IS" BASIS,
 ** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ** See the License for the specific language governing permissions and
 ** limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

  <!-- Global Actions -->
  <group android:id="@+id/mnu_actions_global">
    <item
      android:id="@+id/mnu_actions_properties_current_folder"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_properties_current_folder"/>
    <item
      android:id="@+id/mnu_actions_refresh"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_refresh"/>
    <item
      android:id="@+id/mnu_actions_new_directory"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_new_directory"/>
    <item
      android:id="@+id/mnu_actions_new_file"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_new_file"/>
    <item
      android:id="@+id/mnu_actions_select_all"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_select_all"/>
    <item
      android:id="@+id/mnu_actions_deselect_all"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_deselect_all"/>
    <item
      android:id="@+id/mnu_actions_paste_selection"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_paste_selection"/>
    <item
      android:id="@+id/mnu_actions_move_selection"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_move_selection"/>
    <item
      android:id="@+id/mnu_actions_delete_selection"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_delete_selection"/>
    <item
      android:id="@+id/mnu_actions_compress_selection"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_compress_selection"/>
    <item
      android:id="@+id/mnu_actions_create_link_global"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_create_link"/>
    <item
      android:id="@+id/mnu_actions_send_selection"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_send_selection"/>
    <item
      android:id="@+id/mnu_actions_add_to_bookmarks_current_folder"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_add_to_bookmarks"/>
    <item
      android:id="@+id/mnu_actions_add_shortcut_current_folder"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_add_shortcut"/>
  </group>

  <!-- FileSystemObject Actions -->
  <group android:id="@+id/mnu_actions_fso">
    <item
      android:id="@+id/mnu_actions_properties"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_properties"/>
    <item
      android:id="@+id/mnu_actions_select"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_select"/>
    <item
      android:id="@+id/mnu_actions_deselect"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_deselect"/>
    <item
      android:id="@+id/mnu_actions_open"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_open"/>
    <item
      android:id="@+id/mnu_actions_open_with"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_open_with"/>
    <item
      android:id="@+id/mnu_actions_delete"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_delete"/>
    <item
      android:id="@+id/mnu_actions_rename"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_rename"/>
    <item
      android:id="@+id/mnu_actions_compress"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_compress"/>
    <item
      android:id="@+id/mnu_actions_extract"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_extract"/>
    <item
      android:id="@+id/mnu_actions_create_copy"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_create_copy"/>
    <item
      android:id="@+id/mnu_actions_create_link"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_create_link"/>
    <item
      android:id="@+id/mnu_actions_execute"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_execute"/>
    <item
      android:id="@+id/mnu_actions_send"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_send"/>
    <item
      android:id="@+id/mnu_actions_add_to_bookmarks"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_add_to_bookmarks"/>
    <item
      android:id="@+id/mnu_actions_add_shortcut"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_add_shortcut"/>
    <item
      android:id="@+id/mnu_actions_compute_checksum"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_compute_checksum"/>
    <item
      android:id="@+id/mnu_actions_open_parent_folder"
      android:showAsAction="ifRoom"
      android:title="@string/actions_menu_open_parent_folder"/>
  </group>

</menu>