<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->

<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Search Results -->
    <PreferenceCategory
      android:key="search_results"
      android:title="@string/pref_search_results_category">

      <!-- Highlight search terms -->
      <CheckBoxPreference
        android:key="cm_filemanager_highlight_terms"
        android:title="@string/pref_highlight_terms"
        android:persistent="true"
        android:defaultValue="true" />

      <!-- Relevance widget -->
      <CheckBoxPreference
        android:key="cm_filemanager_show_relevance_widget"
        android:title="@string/pref_show_relevance_widget"
        android:persistent="true"
        android:defaultValue="true" />

      <!-- Sort results mode -->
      <ListPreference
        android:key="cm_filemanager_sort_search_results_mode"
        android:title="@string/pref_sort_search_results_mode"
        android:entries="@array/sort_search_results_mode_labels"
        android:entryValues="@array/sort_search_results_mode_values"
        android:defaultValue="2"
        android:persistent="true" />

    </PreferenceCategory>

    <!-- Privacity -->
    <PreferenceCategory
      android:key="search_privacity"
      android:title="@string/pref_search_privacity_category">

      <!-- Save search terms -->
      <CheckBoxPreference
        android:key="cm_filemanager_save_search_terms"
        android:title="@string/pref_save_search_terms"
        android:summaryOn="@string/pref_save_search_terms_on"
        android:summaryOff="@string/pref_save_search_terms_off"
        android:persistent="true"
        android:defaultValue="true" />

      <!-- Remove saved search terms -->
      <Preference
        android:key="cm_filemanager_remove_saved_search_terms"
        android:title="@string/pref_remove_saved_search_terms"
        android:summary="@string/pref_remove_saved_search_terms_summary"
        android:dependency="cm_filemanager_save_search_terms" />
    </PreferenceCategory>

</PreferenceScreen>
