<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_statusbar_portrait_holder"
    android:layout_width="match_parent"
    android:layout_height="@dimen/default_row_height"
    android:background="@drawable/bg_holo_statusbar"
    android:visibility="invisible">

  <RelativeLayout
    android:id="@+id/navigation_statusbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cyanogenmod.filemanager.ui.widgets.ButtonItem
        android:id="@+id/ab_overflow"
        android:layout_width="@dimen/default_buttom_width"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/actionbar_button_overflow_cd"
        android:onClick="onActionBarItemClick"
        android:src="@drawable/ic_holo_light_overflow" />

    <com.cyanogenmod.filemanager.ui.widgets.ButtonItem
      android:id="@+id/ab_actions"
      android:layout_width="@dimen/default_buttom_width"
      android:layout_height="match_parent"
      android:contentDescription="@string/actionbar_button_actions_cd"
      android:onClick="onActionBarItemClick"
      android:src="@drawable/ic_holo_light_contextual_action" />

    <RelativeLayout
      android:id="@+id/navigation_actionbar"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_toLeftOf="@id/ab_overflow"
      android:layout_toRightOf="@id/ab_actions">

      <com.cyanogenmod.filemanager.ui.widgets.ButtonItem
        android:id="@+id/ab_search"
        android:layout_width="@dimen/default_buttom_width"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/actionbar_button_search_cd"
        android:onClick="onActionBarItemClick"
        android:src="@drawable/ic_holo_light_search"
        android:visibility="invisible" />

    </RelativeLayout>

  </RelativeLayout>

</LinearLayout>
